--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -228,7 +228,7 @@
             <div class="container">
                 <div class="header-wrap">
                     <div class="logo logo-width-1">
-                        <a href="index.html"><img src="assets/imgs/theme/icons/buddylogo1.png" alt="logo"></a>
+                        <a href="/"><img src="assets/imgs/theme/icons/buddylogo1.png" alt="logo"></a>
                     </div>
                     <div class="header-right">
                          <div class="search-style-2">
@@ -252,16 +252,16 @@
                                 <div class="header-action-icon-2">
                                     <a href="/wallet">
                                         <img class="svgInject" alt="wallet" src="assets/imgs/theme/icons/wallet.png">
-                                        <!-- <span class="pro-count blue">4</span> -->
+                                       
                                     </a>
                                 </div>
 
-                                <div class="header-action-icon-2">
+                                <!-- <div class="header-action-icon-2">
                                     <a href="/coupon">
                                         <img class="svgInject" alt="coupon" src="assets/imgs/theme/icons/coupon.png">
-                                        <!-- <span class="pro-count blue">4</span> -->
+                                      
                                     </a>
-                                </div>
+                                </div> -->
 
                             </div>
                         </div>
@@ -310,24 +310,24 @@
                                         <a href="/shop">Shop</a>
                                     </li>
                                     
-                                    <li class="position-static"><a href="#">About <i
+                                    <!-- <li class="position-static"><a href="#">About <i
                                                 class="fi-rs-angle-dow"></i></a>
                                        
-                                    </li>
+                                    </li> -->
                                   
-                                    <li><a href="#">Pages </a>
+                                    <!-- <li><a href="#">Pages </a> </li> -->
                                        
-                                    </li>
-                                    <li>
+                                   
+                                    <!-- <li>
                                         <a href="page-contact.html">Contact</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </nav>
                         </div>
                     </div>
-                    <div class="hotline d-none d-lg-block">
+                    <!-- <div class="hotline d-none d-lg-block">
                         <p><i class="fi-rs-headset"></i><span>Hotline</span> 1900 - 888 </p>
-                    </div>
+                    </div> -->
                   
                     <div class="header-action-right d-block d-lg-none">
                         <div class="header-action-2">
