--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -20,7 +20,7 @@
       border-color: green !important;
     }
     body {
-  background-image: url('/assets/imgs/page/dumbal image.jpg'); 
+  /* background-image: url('/assets/imgs/page/dumbal image.jpg');  */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
