--- a/views/admin/admin-error.ejs
+++ b/views/admin/admin-error.ejs
@@ -34,12 +34,8 @@
 
   <h1>Error Page Admin</h1>
   <p>An error occurred.</p>
-  <button onclick="godashboard()">Go to Home Page</button>
+  <button onclick="window.location.href='/admin'">Go Back to Home</button>
 
-  <script>
-      function godashboard() {
-          window.location.href = "/admin";
-      }
-  </script>
+
 
 <%- include("../../views/partials/admin/footer") %>
