--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -12,7 +12,7 @@
                                     <h2 class="animated fw-900">Supper value deals</h2>
                                     <h1 class="animated fw-900 text-brand">On all products</h1>
                                     <p class="animated">Save more with coupons & up to 70% off</p>
-                                    <a class="animated btn btn-brush btn-brush-3" href="shop-product-right.html"> Shop
+                                    <a class="animated btn btn-brush btn-brush-3" href="/shop"> Shop
                                         Now </a>
                                 </div>
                             </div>
